Honor content blocking master switch for AiSList